@@ -2,6 +2,11 @@
 			A RISC OS-like filer for X
 			by Thomas Leonard
 
+04-Mar-2001
+~~~~~~~~~~~
+When resizing windows, try to keep the window fully inside the screen area
+(Denis Manente).
+
 03-Mar-2001
 ~~~~~~~~~~~
 Updated the Dutch translation (Jan Wagemakers).
